--- a/docs/src/main/asciidoc/spring-web.adoc
+++ b/docs/src/main/asciidoc/spring-web.adoc
@@ -316,9 +316,10 @@ The following table shows how Spring Web annotations can be converted to JAX-RS 
 
 == More Spring guides
 
-Quarkus support has more Spring compatibility features. See the following guides for more details:
+Quarkus has more Spring compatibility features. See the following guides for more details:
 
 * link:spring-di[Quarkus - Extension for Spring DI]
 * link:spring-data-jpa[Quarkus - Extension for Spring Data JPA]
 * link:spring-security[Quarkus - Extension for Spring Security]
+* link:spring-spring-config-client[Quarkus - Reading properties from Spring Cloud Config Server]
 
