--- a/docs/src/main/asciidoc/spring-data-jpa.adoc
+++ b/docs/src/main/asciidoc/spring-data-jpa.adoc
@@ -595,8 +595,9 @@ Spring classes and annotations are only used for reading metadata and / or are u
 
 == More Spring guides
 
-Quarkus support has more Spring compatibility features. See the following guides for more details:
+Quarkus has more Spring compatibility features. See the following guides for more details:
 
 * link:spring-di[Quarkus - Extension for Spring DI]
 * link:spring-web[Quarkus - Extension for Spring Web]
 * link:spring-security[Quarkus - Extension for Spring Security]
+* link:spring-spring-config-client[Quarkus - Reading properties from Spring Cloud Config Server]
