--- a/docs/src/main/asciidoc/kafka.adoc
+++ b/docs/src/main/asciidoc/kafka.adoc
@@ -292,7 +292,7 @@ Then, you just need to run the application using:
 
 [source, shell]
 ----
-./mvnw compile quarkus:dev
+./mvnw quarkus:dev
 ----
 
 Open `http://localhost:8080/prices.html` in your browser.
