Write the getting started with reactive documentation
Co-Authored-By: Guillaume Smet <guillaume.smet@gmail.com>

--- a/docs/src/main/asciidoc/mongodb-panache.adoc
+++ b/docs/src/main/asciidoc/mongodb-panache.adoc
@@ -689,6 +689,7 @@ data class Person (
 ): PanacheMongoEntity()
 ----
 
+[[reactive]]]]
 == Reactive Entities and Repositories
 
 MongoDB with Panache allows using reactive style implementation for both entities and repositories.
