--- a/docs/src/main/asciidoc/getting-started.adoc
+++ b/docs/src/main/asciidoc/getting-started.adoc
@@ -443,26 +443,12 @@ So if you want to deploy your application somewhere, you need to copy the _runne
 
 NOTE: Before running the application, don't forget to stop the hot reload mode (hit `CTRL+C`), or you will have a port conflict.
 
-== Async
-
-The resource can also use `CompletionStage` or `Uni` (requires the `quarkus-resteasy-mutiny` extension) as return type to handle asynchronous actions:
-
-[source,java]
-----
-@GET
-@Produces(MediaType.TEXT_PLAIN)
-public Uni<String> hello() {
-    return Uni.createFrom().item(() -> "hello");
-}
-----
-
-The async version of the code is available in the {quickstarts-base-url}[GitHub] repository, in the `getting-started-async` directory.
-
 == What's next?
 
 This guide covered the creation of an application using Quarkus.
 However, there is much more.
 We recommend continuing the journey with the link:building-native-image[building a native executable guide], where you learn about creating a native executable and packaging it in a container.
+If you are interested in reactive, we recommend the link:getting-started-reactive[Getting started with reactive guide], where you can see how to implement reactive applications with Quarkus.
 
 In addition, the link:tooling[tooling guide] document explains how to:
 
@@ -470,4 +456,3 @@ In addition, the link:tooling[tooling guide] document explains how to:
 * enable the _development mode_ (hot reload)
 * import the project in your favorite IDE
 * and more
-
